--- a/config/content.htm
+++ b/config/content.htm
@@ -28,8 +28,7 @@
 <p>網站倉儲: <a href="https://github.com/mdecourse/cp2021_hw">https://github.com/mdecourse/cp2021_hw</a></p>
 <p>網站連結: <a href="https://mde.tw/cp2021_hw">https://mde.tw/cp2021_hw</a></p>
 <p>其他與個人或作業相關資料說明或介紹:</p>
-<p>mdecourse 所屬的實驗室: <a href="https://mde.tw">https://mde.tw</a></p>
-<h2>portable_hybrid</h2>
+<p>mdecourse 所屬的實驗室: <a href="https://mde.tw">https://mde.tw</a></p><h2>portable_hybrid</h2>
 <p>W8 配合電腦輔助設計室所建立的 <a href="https://drive.google.com/file/d/1MwUQNWATIgwWoT--HELUHcepNsNi4uTP/view?usp=sharing">portable_hybrid.7z</a> 可攜程式環境系統.</p>
 <p style="padding-left: 30px;">註: portable_hybrid.7z 是儲存在 2021fall At mde 的 GDrive 中.</p>
 <p><a href="https://drive.google.com/file/d/1MwUQNWATIgwWoT--HELUHcepNsNi4uTP/view?usp=sharing">portable_hybrid.7z</a> 下載檔案約 350MB, 解開壓縮檔案後約為 1GB.</p>
