--- a/content/Fossil Server.html
+++ b/content/Fossil Server.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='portable_hybrid.html'>portable_hybrid</a><ul class='dropdown'><li><a href='ANSI C.html'>ANSI C</a><li><a href='C-notes.html'>C-notes</a><li><a href='Pyslvs-UI.html'>Pyslvs-UI</a></li></ul><li><a href='GitExtensions.html'>GitExtensions</a><li><a href='run.html'>run</a><li><a href='runsrc.html'>runsrc</a><li><a href='Snake.html'>Snake</a><li><a href='SSH.html'>SSH</a><li class='has-children'><a href='Network.html'>Network</a><ul class='dropdown'><li><a href='Fossil Server.html'>Fossil Server</a></li></li></ul></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='Token.html'>Token</a><li><a href='SSH push.html'>SSH push</a></li></ul><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li><a href='Python.html'>Python</a><li><a href='run1.html'>run1</a><li><a href='run2.html'>run2</a><li><a href='run3.html'>run3</a><li><a href='Server.html'>Server</a><li><a href='W11-1.html'>W11-1</a><li><a href='W12-1.html'>W12-1</a></li></ul><li class='has-children'><a href='W10.html'>W10</a><ul class='dropdown'><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='W11 demo.html'>W11 demo</a><li><a href='W12 demo.html'>W12 demo</a></li></ul><li><a href='Examples.html'>Examples</a><li><a href='Snakey.html'>Snakey</a><li><a href='W12.html'>W12</a></li></ul><li class='has-children'><a href='Exam.html'>Exam</a><ul class='dropdown'><li><a href='W13.html'>W13</a></li></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li class='has-children'><a href='Algorithms.html'>Algorithms</a><ul class='dropdown'><li><a href='Practice1.html'>Practice1</a><li><a href='Practice2.html'>Practice2</a><li><a href='Practice3.html'>Practice3</a></li></ul><li><a href='Path Finding.html'>Path Finding</a><li><a href='ML in Brython.html'>ML in Brython</a><li><a href='Math.html'>Math</a></li></ul><li><a href='Final Project.html'>Final Project</a></li>
+                     <li class='has-children'><a href='大約.html'>大約</a><ul class='dropdown'><li class='has-children'><a href='portable_hybrid.html'>portable_hybrid</a><ul class='dropdown'><li><a href='安西 C.html'>安西 C</a><li><a href='C-註釋.html'>C-註釋</a><li><a href='Pyslvs-UI.html'>Pyslvs-UI</a></li></ul><li><a href='GitExtensions.html'>GitExtensions</a><li><a href='run.html'>run</a><li><a href='runsrc.html'>runsrc</a><li><a href='Snake.html'>Snake</a><li><a href='SSH.html'>SSH</a><li class='has-children'><a href='Network.html'>Network</a><ul class='dropdown'><li><a href='Fossil Server.html'>Fossil Server</a></li></li></ul></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='Token.html'>Token</a><li><a href='SSH push.html'>SSH push</a></li></ul><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li><a href='Python.html'>Python</a><li><a href='run1.html'>run1</a><li><a href='run2.html'>run2</a><li><a href='run3.html'>run3</a><li><a href='Server.html'>Server</a><li><a href='W11-1.html'>W11-1</a><li><a href='W12-1.html'>W12-1</a></li></ul><li class='has-children'><a href='W10.html'>W10</a><ul class='dropdown'><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='W11 demo.html'>W11 demo</a><li><a href='W12 demo.html'>W12 demo</a></li></ul><li><a href='Examples.html'>Examples</a><li><a href='Snakey.html'>Snakey</a><li><a href='W12.html'>W12</a></li></ul><li class='has-children'><a href='Exam.html'>Exam</a><ul class='dropdown'><li><a href='W13.html'>W13</a></li></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li class='has-children'><a href='Algorithms.html'>Algorithms</a><ul class='dropdown'><li><a href='Practice1.html'>Practice1</a><li><a href='Practice2.html'>Practice2</a><li><a href='Practice3.html'>Practice3</a></li></ul><li><a href='Path Finding.html'>Path Finding</a><li><a href='ML in Brython.html'>ML in Brython</a><li><a href='Math.html'>Math</a></li></ul><li><a href='Final Project.html'>Final Project</a></li>
                       </ul>
                 </nav>
               </div>
@@ -140,22 +140,22 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Network << <a href='Network.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1<br /><h1>Fossil Server</h1>
-<p>從 W7 分組後, 各組在電腦輔助設計室中將會有一台 Windows 10 電腦的第三磁區並未保護, 因此可以用來建立 Fossil SCM Server, 此 Server 的功能可以用來與 Github 結合使用, 分別用來管理各組所共同開發的 Brython 程式, 並且提供 Forum, Chat 與 Documentation (用來伺服課程的靜態網頁) 功能.</p>
-<p>在 Windows 操作系統建立 Fossil SCM 所需要的工具:</p>
+<p _msthash="170754" _msttexthash="2461944121">從 W7 分組後, 各組在電腦輔助設計室中將會有一台 Windows 10 電腦的第三磁區並未保護, 因此可以用來建立 Fossil SCM Server, 此 Server 的功能可以用來與 Github 結合使用, 分別用來管理各組所共同開發的 Brython 程式, 並且提供 Forum, Chat 與 Documentation (用來伺服課程的靜態網頁) 功能.</p>
+<p _msthash="170755" _msttexthash="113622327">在 Windows 操作系統建立 Fossil SCM 所需要的工具:</p>
 <ol>
-<li>Fossil SCM - Fossil SCM server 主體.</li>
-<li>Stunnel - https 代理主機.</li>
-<li>Nginx - WWW 伺服器, 主要將 http 連線跳轉至 https.</li>
-<li>NSSM - 將 Fossil server, Stunnel, Nginx 執行程式設為 service.</li>
+<li _msthash="316029" _msttexthash="25959869">Fossil SCM - Fossil SCM server 主體.</li>
+<li _msthash="316030" _msttexthash="27473680">Stunnel - https 代理主機.</li>
+<li _msthash="316031" _msttexthash="103411594">Nginx - WWW 伺服器, 主要將 http 連線跳轉至 https.</li>
+<li _msthash="316032" _msttexthash="100867390">NSSM - 將 Fossil server, Stunnel, Nginx 執行程式設為 service.</li>
 </ol>
-<p>步驟 1: 從 <a href="https://fossil-scm.org/home/uv/download.html">https://fossil-scm.org/home/uv/download.html</a> 下載 fossil.exe, 存入可攜系統 y:\</p>
-<p>步驟 2: 從 <a href="https://www.stunnel.org/downloads.html">https://www.stunnel.org/downloads.html</a> 下載 stunnel 套件, 存入可攜系統 y:\</p>
-<p>步驟 3: 從 <a href="https://nginx.org/en/download.html">https://nginx.org/en/download.html</a> 下載 nginx 套件, 存入可攜系統 y:\</p>
-<p>步驟 4: 從 <a href="https://nssm.cc/download">https://nssm.cc/download</a> 下載 nssm.exe, 存入可攜系統 y:\</p>
-<p>建立 c:\pj2022\repo 目錄, 啟動可攜系統後, 進入 repo 目錄後, 以 fossil init pj2022.fossil 建立 pj2022.fossil 倉儲檔案.</p>
-<p>接著以 fossil user password Account Password -R pj2022.fossil 指令, 針對帳號為 Account 的 pj2022.fossil 管理者, 更改倉儲管理密碼為 Password.</p>
-<p>若要將 Fossil Server 在 port 9000 啟動, 執行 fossil server c:\pj2022\repo\pj2022.fossil --port 9000 後, 就可以利用瀏覽器開啟 <a href="http://localhost:9000">http://localhost:9000</a> 中的 pj2022.fossil 網際伺服器.</p>
-<p>接著設定 Stunnel 的 stunnel.conf 為:</p>
+<p _msthash="170756" _msttexthash="200057169">步驟 1: 從 <a href="https://fossil-scm.org/home/uv/download.html">https://fossil-scm.org/home/uv/download.html</a> 下載 fossil.exe, 存入可攜系統 y:\</p>
+<p _msthash="170757" _msttexthash="214118034">步驟 2: 從 <a href="https://www.stunnel.org/downloads.html">https://www.stunnel.org/downloads.html</a> 下載 stunnel 套件, 存入可攜系統 y:\</p>
+<p _msthash="170758" _msttexthash="195167154">步驟 3: 從 <a href="https://nginx.org/en/download.html">https://nginx.org/en/download.html</a> 下載 nginx 套件, 存入可攜系統 y:\</p>
+<p _msthash="170759" _msttexthash="139177584">步驟 4: 從 <a href="https://nssm.cc/download">https://nssm.cc/download</a> 下載 nssm.exe, 存入可攜系統 y:\</p>
+<p _msthash="170760" _msttexthash="338699270">建立 c:\pj2022\repo 目錄, 啟動可攜系統後, 進入 repo 目錄後, 以 fossil init pj2022.fossil 建立 pj2022.fossil 倉儲檔案.</p>
+<p _msthash="170761" _msttexthash="600429206">接著以 fossil user password Account Password -R pj2022.fossil 指令, 針對帳號為 Account 的 pj2022.fossil 管理者, 更改倉儲管理密碼為 Password.</p>
+<p _msthash="170762" _msttexthash="736307325">若要將 Fossil Server 在 port 9000 啟動, 執行 fossil server c:\pj2022\repo\pj2022.fossil --port 9000 後, 就可以利用瀏覽器開啟 <a href="http://localhost:9000">http://localhost:9000</a> 中的 pj2022.fossil 網際伺服器.</p>
+<p _msthash="170763" _msttexthash="32314841">接著設定 Stunnel 的 stunnel.conf 為:</p>
 <pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">; TLS front-end to a web server
 [https]
 accept  = Server_domain_name:443
@@ -163,26 +163,26 @@ connect = 9000
 cert = localhost.crt
 key = localhost.key
 TIMEOUTclose = 0</pre>
-<p>以 y:\stunnel.exe 執行後, 必須將前面採 http 協定傳送 port 9000 資料的 Fossil SCM server 指令改為:</p>
-<p>fossil server c:\pj2022\repo\pj2022.fossil --port 9000 --https</p>
-<p>表示要送出 https 格式封包讓 Stunnel 對外連線.</p>
-<p>待 Fossil SCM server 與 Stunnel 都正常運作後, 就可以透過瀏覽器以 <a href="https://Server_domain_name">https://Server_domain_name</a> 連接至 pj2022.fossil 的網際倉儲伺服器.</p>
-<p>總結上述有關設定 Fossil SCM server 以及 Stunnel https 代理, 所需要執行的 fossil.exe 與 stunnel.exe 都必須能通過 Windows 10 的防火牆.</p>
-<h4>nssm 服務設定:</h4>
-<p style="padding-left: 30px;">nssm install fossil_server</p>
-<p style="padding-left: 60px;">Application Path: C:\pj2022\fossil.exe</p>
-<p style="padding-left: 60px;">Startup directory: C:\pj2022</p>
-<p style="padding-left: 60px;">Arguments: server C:\pj2022\repo\pj2022.fossil --port 9000 --https</p>
-<p style="padding-left: 30px;">nssm install stunnel</p>
-<p style="padding-left: 60px;">Application Path: C:\pj2022\stunnel\bin\stunnel.exe</p>
-<p style="padding-left: 60px;">Startup directory: C:\pj2022</p>
-<p style="padding-left: 60px;">Arguments: 留空白, stunnel.exe 會自動以 config\stunnel.conf 作為設定參數.</p>
-<h4>制式 https:</h4>
-<p style="padding-left: 30px;">透過 <a href="https://letsencrypt.org/">https://letsencrypt.org/</a> 申請正式的網站符號名稱數位簽章.</p>
-<p style="padding-left: 30px;"><a href="https://certbot.eff.org/instructions?ws=nginx&amp;os=windows">https://certbot.eff.org/instructions?ws=nginx&amp;os=windows</a></p>
-<p style="padding-left: 30px;">關掉系統 proxy 設定</p>
-<p style="padding-left: 30px;">安裝 certbot</p>
-<p style="padding-left: 30px;">以管理者開啟 cmd, 執行 certbot certonly --webroot</p>
+<p _msthash="170764" _msttexthash="289308799">以 y:\stunnel.exe 執行後, 必須將前面採 http 協定傳送 port 9000 資料的 Fossil SCM server 指令改為:</p>
+<p _msthash="170765" _msttexthash="2253849">fossil server c:\pj2022\repo\pj2022.fossil --port 9000 --https</p>
+<p _msthash="170766" _msttexthash="97423092">表示要送出 https 格式封包讓 Stunnel 對外連線.</p>
+<p _msthash="170767" _msttexthash="568850776">待 Fossil SCM server 與 Stunnel 都正常運作後, 就可以透過瀏覽器以 <a href="https://Server_domain_name">https://Server_domain_name</a> 連接至 pj2022.fossil 的網際倉儲伺服器.</p>
+<p _msthash="170768" _msttexthash="590117931">總結上述有關設定 Fossil SCM server 以及 Stunnel https 代理, 所需要執行的 fossil.exe 與 stunnel.exe 都必須能通過 Windows 10 的防火牆.</p>
+<h4 _msthash="187741" _msttexthash="17387929">nssm 服務設定:</h4>
+<p _msthash="170769" _msttexthash="629122" style="padding-left: 30px;">nssm install fossil_server</p>
+<p _msthash="170770" _msttexthash="1053442" style="padding-left: 60px;">Application Path: C:\pj2022\fossil.exe</p>
+<p _msthash="170771" _msttexthash="575276" style="padding-left: 60px;">Startup directory: C:\pj2022</p>
+<p _msthash="170772" _msttexthash="2545933" style="padding-left: 60px;">Arguments: server C:\pj2022\repo\pj2022.fossil --port 9000 --https</p>
+<p _msthash="170773" _msttexthash="398931" style="padding-left: 30px;">nssm install stunnel</p>
+<p _msthash="170774" _msttexthash="1931306" style="padding-left: 60px;">Application Path: C:\pj2022\stunnel\bin\stunnel.exe</p>
+<p _msthash="170775" _msttexthash="575276" style="padding-left: 60px;">Startup directory: C:\pj2022</p>
+<p _msthash="170776" _msttexthash="183133574" style="padding-left: 60px;">Arguments: 留空白, stunnel.exe 會自動以 config\stunnel.conf 作為設定參數.</p>
+<h4 _msthash="187742" _msttexthash="4537325">制式 https:</h4>
+<p _msthash="170777" _msttexthash="235692366" style="padding-left: 30px;">透過 <a href="https://letsencrypt.org/">https://letsencrypt.org/</a> 申請正式的網站符號名稱數位簽章.</p>
+<p style="padding-left: 30px;"><a _msthash="170778" _msttexthash="2543827" href="https://certbot.eff.org/instructions?ws=nginx&amp;os=windows">https://certbot.eff.org/instructions?ws=nginx&amp;os=windows</a></p>
+<p _msthash="170779" _msttexthash="26697281" style="padding-left: 30px;">關掉系統 proxy 設定</p>
+<p _msthash="170780" _msttexthash="5894746" style="padding-left: 30px;">安裝 certbot</p>
+<p _msthash="170781" _msttexthash="35941854" style="padding-left: 30px;">以管理者開啟 cmd, 執行 certbot certonly --webroot</p>
 <p style="padding-left: 30px;"></p>
 <p></p>
 <br />Network << <a href='Network.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1</div>
