--- a/content/Practice2.html
+++ b/content/Practice2.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='portable_hybrid.html'>portable_hybrid</a><ul class='dropdown'><li><a href='ANSI C.html'>ANSI C</a><li><a href='C-notes.html'>C-notes</a><li><a href='Pyslvs-UI.html'>Pyslvs-UI</a></li></ul><li><a href='GitExtensions.html'>GitExtensions</a><li><a href='run.html'>run</a><li><a href='runsrc.html'>runsrc</a><li><a href='Snake.html'>Snake</a><li><a href='SSH.html'>SSH</a><li class='has-children'><a href='Network.html'>Network</a><ul class='dropdown'><li><a href='Fossil Server.html'>Fossil Server</a></li></li></ul></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='Token.html'>Token</a><li><a href='SSH push.html'>SSH push</a></li></ul><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li><a href='Python.html'>Python</a><li><a href='run1.html'>run1</a><li><a href='run2.html'>run2</a><li><a href='run3.html'>run3</a><li><a href='Server.html'>Server</a><li><a href='W11-1.html'>W11-1</a><li><a href='W12-1.html'>W12-1</a></li></ul><li class='has-children'><a href='W10.html'>W10</a><ul class='dropdown'><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='W11 demo.html'>W11 demo</a><li><a href='W12 demo.html'>W12 demo</a></li></ul><li><a href='Examples.html'>Examples</a><li><a href='Snakey.html'>Snakey</a><li><a href='W12.html'>W12</a></li></ul><li class='has-children'><a href='Exam.html'>Exam</a><ul class='dropdown'><li><a href='W13.html'>W13</a></li></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li class='has-children'><a href='Algorithms.html'>Algorithms</a><ul class='dropdown'><li><a href='Practice1.html'>Practice1</a><li><a href='Practice2.html'>Practice2</a><li><a href='Practice3.html'>Practice3</a></li></ul><li><a href='Path Finding.html'>Path Finding</a><li><a href='ML in Brython.html'>ML in Brython</a><li><a href='Math.html'>Math</a></li></ul><li><a href='Final Project.html'>Final Project</a></li>
+                     <li class='has-children'><a href='大約.html'>大約</a><ul class='dropdown'><li class='has-children'><a href='portable_hybrid.html'>portable_hybrid</a><ul class='dropdown'><li><a href='安西 C.html'>安西 C</a><li><a href='C-註釋.html'>C-註釋</a><li><a href='Pyslvs-UI.html'>Pyslvs-UI</a></li></ul><li><a href='GitExtensions.html'>GitExtensions</a><li><a href='run.html'>run</a><li><a href='runsrc.html'>runsrc</a><li><a href='Snake.html'>Snake</a><li><a href='SSH.html'>SSH</a><li class='has-children'><a href='Network.html'>Network</a><ul class='dropdown'><li><a href='Fossil Server.html'>Fossil Server</a></li></li></ul></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='Token.html'>Token</a><li><a href='SSH push.html'>SSH push</a></li></ul><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li><a href='Python.html'>Python</a><li><a href='run1.html'>run1</a><li><a href='run2.html'>run2</a><li><a href='run3.html'>run3</a><li><a href='Server.html'>Server</a><li><a href='W11-1.html'>W11-1</a><li><a href='W12-1.html'>W12-1</a></li></ul><li class='has-children'><a href='W10.html'>W10</a><ul class='dropdown'><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='W11 demo.html'>W11 demo</a><li><a href='W12 demo.html'>W12 demo</a></li></ul><li><a href='Examples.html'>Examples</a><li><a href='Snakey.html'>Snakey</a><li><a href='W12.html'>W12</a></li></ul><li class='has-children'><a href='Exam.html'>Exam</a><ul class='dropdown'><li><a href='W13.html'>W13</a></li></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li class='has-children'><a href='Algorithms.html'>Algorithms</a><ul class='dropdown'><li><a href='Practice1.html'>Practice1</a><li><a href='Practice2.html'>Practice2</a><li><a href='Practice3.html'>Practice3</a></li></ul><li><a href='Path Finding.html'>Path Finding</a><li><a href='ML in Brython.html'>ML in Brython</a><li><a href='Math.html'>Math</a></li></ul><li><a href='Final Project.html'>Final Project</a></li>
                       </ul>
                 </nav>
               </div>
@@ -140,10 +140,10 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Practice1 << <a href='Practice1.html'>Previous</a> <a href='Practice3.html'>Next</a> >> Practice3<br /><h1>Practice2</h1>
-<p>這個頁面 demo 如何在同一頁面下納入多個線上 Ace 編輯器與執行按鈕 (<a href="./../downloads/practice_html.txt">practice_html.txt</a> 動態頁面超文件).</p>
-<p>從 1 累加到 100:</p>
-<p><button id="add1to100">1 add to 100</button></p>
-<p>將 iterable 與 iterator <a href="https://home.gamer.com.tw/creationDetail.php?sn=4337438">相關說明</a>, 利用 Brython 與 Ace Editor 整理在這個頁面.</p>
+<p _msthash="171510" _msttexthash="391813383">這個頁面 demo 如何在同一頁面下納入多個線上 Ace 編輯器與執行按鈕 (<a href="./../downloads/practice_html.txt">practice_html.txt</a> 動態頁面超文件).</p>
+<p _msthash="171511" _msttexthash="11776375">從 1 累加到 100:</p>
+<p><button _msthash="97585" _msttexthash="99528" id="add1to100">1 add to 100</button></p>
+<p _msthash="171512" _msttexthash="237047889">將 iterable 與 iterator <a href="https://home.gamer.com.tw/creationDetail.php?sn=4337438">相關說明</a>, 利用 Brython 與 Ace Editor 整理在這個頁面.</p>
 <!-- 導入 brython 程式庫 -->
 <script src="./../cmsimde/static/brython.js"></script>
 <script src="./../cmsimde/static/brython_stdlib.js"></script>
@@ -245,11 +245,11 @@ doc["add1to100"].bind('click', add)
 <div id="kw_editor1" style="width: 600px; height: 300px;"></div>
 <p><!-- 以下的表單與按鈕與前面的 Javascript doSave 函式以及 FileSaver.min.js 互相配合 --></p>
 <p><!-- 存擋表單開始 --></p>
-<form><label>Filename: <input id="kw_filename" placeholder="input file name" type="text"/>.py</label> <input onclick="doSave('kw_py_src1', 'kw_filename1');" type="submit" value="Save"/></form>
+<form><label _msthash="246835" _msttexthash="184665">Filename: <input id="kw_filename" placeholder="input file name" type="text"/>.py</label> <input _mstvalue="44577" onclick="doSave('kw_py_src1', 'kw_filename1');" type="submit" value="Save"/></form>
 <p><!-- 存擋表單結束 --></p>
 <p></p>
 <p><!-- 執行與清除按鈕開始 --></p>
-<p><button id="kw_run1">Run</button> <button id="kw_show_console1">Output</button> <button id="kw_clear_console1">清除輸出區</button><button id="clear_bd1">清除繪圖區</button><button onclick="window.location.reload()">Reload</button></p>
+<p><button _msthash="90226" _msttexthash="32500" id="kw_run1">Run</button> <button _msthash="308470" _msttexthash="82316" id="kw_show_console1">Output</button> <button _msthash="334119" _msttexthash="16632499" id="kw_clear_console1">清除輸出區</button><button _msthash="120113" _msttexthash="16299205" id="clear_bd1">清除繪圖區</button><button _msthash="414366" _msttexthash="74503" onclick="window.location.reload()">Reload</button></p>
 <p><!-- 執行與清除按鈕結束 --></p>
 <p></p>
 <p><!-- 程式執行 ouput 區 --></p>
@@ -259,8 +259,8 @@ doc["add1to100"].bind('click', add)
 <!-- editor1 結束 --><hr/><!-- 第 1 區程式 ########################################### 第 1 區程式結束 -->
 <p></p>
 <!-- 第 2 區程式 ########################################### 第 2 區程式開始-->
-<p>查驗輸入字串程式:</p>
-<p><button id="check_input">查驗輸入字串</button></p>
+<p _msthash="171522" _msttexthash="29714893">查驗輸入字串程式:</p>
+<p><button _msthash="184214" _msttexthash="19994546" id="check_input">查驗輸入字串</button></p>
 <p><!-- 判斷輸入字串是否aA1$, 且至少 8 個字元-開始 -->
 <script type="text/python3">
 from browser import document as doc
@@ -302,11 +302,11 @@ run1()
 <div id="kw_editor2" style="width: 600px; height: 300px;"></div>
 <p><!-- 以下的表單與按鈕與前面的 Javascript doSave 函式以及 FileSaver.min.js 互相配合 --></p>
 <p><!-- 存擋表單開始 --></p>
-<form><label>Filename: <input id="kw_filename2" placeholder="input file name" type="text"/>.py</label> <input onclick="doSave('kw_py_src2', 'kw_filename2');" type="submit" value="Save"/></form>
+<form><label _msthash="246987" _msttexthash="184665">Filename: <input id="kw_filename2" placeholder="input file name" type="text"/>.py</label> <input _mstvalue="44577" onclick="doSave('kw_py_src2', 'kw_filename2');" type="submit" value="Save"/></form>
 <p><!-- 存擋表單結束 --></p>
 <p></p>
 <p><!-- 執行與清除按鈕開始 --></p>
-<p><button id="kw_run2">Run</button> <button id="kw_show_console2">Output</button> <button id="kw_clear_console2">清除輸出區</button><button id="clear_bd2">清除繪圖區</button><button onclick="window.location.reload()">Reload</button></p>
+<p><button _msthash="90392" _msttexthash="32500" id="kw_run2">Run</button> <button _msthash="308753" _msttexthash="82316" id="kw_show_console2">Output</button> <button _msthash="334415" _msttexthash="16632499" id="kw_clear_console2">清除輸出區</button><button _msthash="120305" _msttexthash="16299205" id="clear_bd2">清除繪圖區</button><button _msthash="414596" _msttexthash="74503" onclick="window.location.reload()">Reload</button></p>
 <p><!-- 執行與清除按鈕結束 --></p>
 <p></p>
 <p><!-- 程式執行 ouput 區 --></p>
@@ -316,7 +316,7 @@ run1()
 <!-- editor2 結束 -->
 <p></p>
 <!-- 第 3 區程式 ########################################### 第 3 區程式開始-->
-<p>Leetcode 13: <a href="https://leetcode.com/problems/roman-to-integer/">https://leetcode.com/problems/roman-to-integer/</a> (<a href="https://www.notion.so/Array-String-9be4f4243ca94603ae980f78083bf595#c2b8e6f6d12d4968a1d6524e74f4c2e6">Solution</a>)</p>
+<p><span _msthash="171523" _mstmutation="1" _msttexthash="3372629">Leetcode 13: <a _mstmutation="1" href="https://leetcode.com/problems/roman-to-integer/">https://leetcode.com/problems/roman-to-integer/</a> (<a _mstmutation="1" href="https://www.notion.so/Array-String-9be4f4243ca94603ae980f78083bf595#c2b8e6f6d12d4968a1d6524e74f4c2e6">Solution</a></span>)</p>
 <p></p>
 <p><!-- 導入 gearUtils-0.9.js Cango 齒輪繪圖程式庫 -->
 <script src="https://mde.tw/cp2021/cmsimde/static/Cango-24v03-min.js"></script>
