--- a/content/Final Project.html
+++ b/content/Final Project.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='portable_hybrid.html'>portable_hybrid</a><ul class='dropdown'><li><a href='ANSI C.html'>ANSI C</a><li><a href='C-notes.html'>C-notes</a><li><a href='Pyslvs-UI.html'>Pyslvs-UI</a></li></ul><li><a href='GitExtensions.html'>GitExtensions</a><li><a href='run.html'>run</a><li><a href='runsrc.html'>runsrc</a><li><a href='Snake.html'>Snake</a><li><a href='SSH.html'>SSH</a><li class='has-children'><a href='Network.html'>Network</a><ul class='dropdown'><li><a href='Fossil Server.html'>Fossil Server</a></li></li></ul></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='Token.html'>Token</a><li><a href='SSH push.html'>SSH push</a></li></ul><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li><a href='Python.html'>Python</a><li><a href='run1.html'>run1</a><li><a href='run2.html'>run2</a><li><a href='run3.html'>run3</a><li><a href='Server.html'>Server</a><li><a href='W11-1.html'>W11-1</a><li><a href='W12-1.html'>W12-1</a></li></ul><li class='has-children'><a href='W10.html'>W10</a><ul class='dropdown'><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='W11 demo.html'>W11 demo</a><li><a href='W12 demo.html'>W12 demo</a></li></ul><li><a href='Examples.html'>Examples</a><li><a href='Snakey.html'>Snakey</a><li><a href='W12.html'>W12</a></li></ul><li class='has-children'><a href='Exam.html'>Exam</a><ul class='dropdown'><li><a href='W13.html'>W13</a></li></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li class='has-children'><a href='Algorithms.html'>Algorithms</a><ul class='dropdown'><li><a href='Practice1.html'>Practice1</a><li><a href='Practice2.html'>Practice2</a><li><a href='Practice3.html'>Practice3</a></li></ul><li><a href='Path Finding.html'>Path Finding</a><li><a href='ML in Brython.html'>ML in Brython</a><li><a href='Math.html'>Math</a></li></ul><li><a href='Final Project.html'>Final Project</a></li>
+                     <li class='has-children'><a href='大約.html'>大約</a><ul class='dropdown'><li class='has-children'><a href='portable_hybrid.html'>portable_hybrid</a><ul class='dropdown'><li><a href='安西 C.html'>安西 C</a><li><a href='C-註釋.html'>C-註釋</a><li><a href='Pyslvs-UI.html'>Pyslvs-UI</a></li></ul><li><a href='GitExtensions.html'>GitExtensions</a><li><a href='run.html'>run</a><li><a href='runsrc.html'>runsrc</a><li><a href='Snake.html'>Snake</a><li><a href='SSH.html'>SSH</a><li class='has-children'><a href='Network.html'>Network</a><ul class='dropdown'><li><a href='Fossil Server.html'>Fossil Server</a></li></li></ul></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='Token.html'>Token</a><li><a href='SSH push.html'>SSH push</a></li></ul><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li><a href='Python.html'>Python</a><li><a href='run1.html'>run1</a><li><a href='run2.html'>run2</a><li><a href='run3.html'>run3</a><li><a href='Server.html'>Server</a><li><a href='W11-1.html'>W11-1</a><li><a href='W12-1.html'>W12-1</a></li></ul><li class='has-children'><a href='W10.html'>W10</a><ul class='dropdown'><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='W11 demo.html'>W11 demo</a><li><a href='W12 demo.html'>W12 demo</a></li></ul><li><a href='Examples.html'>Examples</a><li><a href='Snakey.html'>Snakey</a><li><a href='W12.html'>W12</a></li></ul><li class='has-children'><a href='Exam.html'>Exam</a><ul class='dropdown'><li><a href='W13.html'>W13</a></li></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li class='has-children'><a href='Algorithms.html'>Algorithms</a><ul class='dropdown'><li><a href='Practice1.html'>Practice1</a><li><a href='Practice2.html'>Practice2</a><li><a href='Practice3.html'>Practice3</a></li></ul><li><a href='Path Finding.html'>Path Finding</a><li><a href='ML in Brython.html'>ML in Brython</a><li><a href='Math.html'>Math</a></li></ul><li><a href='Final Project.html'>Final Project</a></li>
                       </ul>
                 </nav>
               </div>
@@ -140,26 +140,26 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Math << <a href='Math.html'>Previous</a> <br /><h1>Final Project</h1>
-<p>Final Project 佔學期成績 30%</p>
-<p><a href="https://github.com/mdecourse/cp2021/discussions/11">Final Project 具體項目成果回報區</a></p>
-<p>利用 Brython 寫一個會<span style="background-color: #ffff99;">令人想玩</span>的網際遊戲.</p>
-<h4>參考章節:</h4>
+<p _msthash="171654" _msttexthash="35398870">Final Project 佔學期成績 30%</p>
+<p><a _msthash="171655" _msttexthash="73109777" href="https://github.com/mdecourse/cp2021/discussions/11">Final Project 具體項目成果回報區</a></p>
+<p _msthash="171656" _msttexthash="107558906">利用 Brython 寫一個會<span style="background-color: #ffff99;">令人想玩</span>的網際遊戲.</p>
+<h4 _msthash="188773" _msttexthash="13166543">參考章節:</h4>
 <ol>
-<li><a href="https://www.enago.tw/academy/%E5%A6%82%E4%BD%95%E6%92%B0%E5%AF%AB%E6%91%98%E8%A6%81%EF%BC%9F/">專題摘要</a></li>
-<li><a href="https://ctld.ntu.edu.tw/ls/strategy/lecture.php?index=126">資料蒐集</a></li>
-<li><a href="http://old.gst.org.tw/WPES/guideline_D-a.htm">設計動機</a></li>
-<li><a href="https://wordvice.com.tw/%E5%A6%82%E4%BD%95%E5%AF%AB%E5%A5%BD%E8%AB%96%E6%96%87%E4%B8%AD%E7%9A%84%E3%80%8C%E7%A0%94%E7%A9%B6%E6%96%B9%E6%B3%95%E3%80%8D/">設計方法</a></li>
-<li><a href="http://microbiology.scu.edu.tw/MIB/wong/courses/writing/result02.htm">結果與討論</a></li>
-<li><a href="https://www.enago.tw/academy/what-you-need-to-know-about-the-manuscript-appendix/">附錄</a></li>
+<li><a _msthash="317577" _msttexthash="13780338" href="https://www.enago.tw/academy/%E5%A6%82%E4%BD%95%E6%92%B0%E5%AF%AB%E6%91%98%E8%A6%81%EF%BC%9F/">專題摘要</a></li>
+<li><a _msthash="317578" _msttexthash="14972737" href="https://ctld.ntu.edu.tw/ls/strategy/lecture.php?index=126">資料蒐集</a></li>
+<li><a _msthash="317579" _msttexthash="12914902" href="http://old.gst.org.tw/WPES/guideline_D-a.htm">設計動機</a></li>
+<li><a _msthash="317580" _msttexthash="13562614" href="https://wordvice.com.tw/%E5%A6%82%E4%BD%95%E5%AF%AB%E5%A5%BD%E8%AB%96%E6%96%87%E4%B8%AD%E7%9A%84%E3%80%8C%E7%A0%94%E7%A9%B6%E6%96%B9%E6%B3%95%E3%80%8D/">設計方法</a></li>
+<li><a _msthash="317581" _msttexthash="19249321" href="http://microbiology.scu.edu.tw/MIB/wong/courses/writing/result02.htm">結果與討論</a></li>
+<li><a _msthash="317582" _msttexthash="7414732" href="https://www.enago.tw/academy/what-you-need-to-know-about-the-manuscript-appendix/">附錄</a></li>
 </ol>
-<h4>參考資料:</h4>
-<p style="padding-left: 30px;"><a href="https://github.com/collections/web-games">https://github.com/collections/web-games</a></p>
-<p style="padding-left: 30px;"><a href="https://github.com/topics/web-game">https://github.com/topics/web-game</a></p>
-<p style="padding-left: 30px;"><a href="https://github.com/topics/browser-game">https://github.com/topics/browser-game</a></p>
-<p style="padding-left: 30px;"><a href="https://github.com/leereilly/games">https://github.com/leereilly/games</a></p>
-<p style="padding-left: 30px;"><a href="https://bmsleight.github.io/brython-blocks/">https://bmsleight.github.io/brython-blocks/</a></p>
-<p style="padding-left: 60px;"><a href="https://github.com/mdecourse/brython-blocks">https://github.com/mdecourse/brython-blocks</a></p>
-<p style="padding-left: 30px;"><span style="background-color: #ffff99;">下一個階段將要導入 <a href="https://github.com/pyodide/pyodide" style="background-color: #ffff99;">https://github.com/pyodide/pyodide</a></span></p><br />Math << <a href='Math.html'>Previous</a> </div>
+<h4 _msthash="188774" _msttexthash="12965524">參考資料:</h4>
+<p style="padding-left: 30px;"><a _msthash="171657" _msttexthash="1347450" href="https://github.com/collections/web-games">https://github.com/collections/web-games</a></p>
+<p style="padding-left: 30px;"><a _msthash="171658" _msttexthash="990886" href="https://github.com/topics/web-game">https://github.com/topics/web-game</a></p>
+<p style="padding-left: 30px;"><a _msthash="171659" _msttexthash="1235897" href="https://github.com/topics/browser-game">https://github.com/topics/browser-game</a></p>
+<p style="padding-left: 30px;"><a _msthash="171660" _msttexthash="1020513" href="https://github.com/leereilly/games">https://github.com/leereilly/games</a></p>
+<p style="padding-left: 30px;"><a _msthash="171661" _msttexthash="1518608" href="https://bmsleight.github.io/brython-blocks/">https://bmsleight.github.io/brython-blocks/</a></p>
+<p style="padding-left: 60px;"><a _msthash="171662" _msttexthash="1564394" href="https://github.com/mdecourse/brython-blocks">https://github.com/mdecourse/brython-blocks</a></p>
+<p style="padding-left: 30px;"><span _msthash="171663" _msttexthash="34632923" style="background-color: #ffff99;">下一個階段將要導入 <a href="https://github.com/pyodide/pyodide" style="background-color: #ffff99;">https://github.com/pyodide/pyodide</a></span></p><br />Math << <a href='Math.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
