--- a/content/Network.html
+++ b/content/Network.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='portable_hybrid.html'>portable_hybrid</a><ul class='dropdown'><li><a href='ANSI C.html'>ANSI C</a><li><a href='C-notes.html'>C-notes</a><li><a href='Pyslvs-UI.html'>Pyslvs-UI</a></li></ul><li><a href='GitExtensions.html'>GitExtensions</a><li><a href='run.html'>run</a><li><a href='runsrc.html'>runsrc</a><li><a href='Snake.html'>Snake</a><li><a href='SSH.html'>SSH</a><li class='has-children'><a href='Network.html'>Network</a><ul class='dropdown'><li><a href='Fossil Server.html'>Fossil Server</a></li></li></ul></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='Token.html'>Token</a><li><a href='SSH push.html'>SSH push</a></li></ul><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li><a href='Python.html'>Python</a><li><a href='run1.html'>run1</a><li><a href='run2.html'>run2</a><li><a href='run3.html'>run3</a><li><a href='Server.html'>Server</a><li><a href='W11-1.html'>W11-1</a><li><a href='W12-1.html'>W12-1</a></li></ul><li class='has-children'><a href='W10.html'>W10</a><ul class='dropdown'><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='W11 demo.html'>W11 demo</a><li><a href='W12 demo.html'>W12 demo</a></li></ul><li><a href='Examples.html'>Examples</a><li><a href='Snakey.html'>Snakey</a><li><a href='W12.html'>W12</a></li></ul><li class='has-children'><a href='Exam.html'>Exam</a><ul class='dropdown'><li><a href='W13.html'>W13</a></li></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li class='has-children'><a href='Algorithms.html'>Algorithms</a><ul class='dropdown'><li><a href='Practice1.html'>Practice1</a><li><a href='Practice2.html'>Practice2</a><li><a href='Practice3.html'>Practice3</a></li></ul><li><a href='Path Finding.html'>Path Finding</a><li><a href='ML in Brython.html'>ML in Brython</a><li><a href='Math.html'>Math</a></li></ul><li><a href='Final Project.html'>Final Project</a></li>
+                     <li class='has-children'><a href='大約.html'>大約</a><ul class='dropdown'><li class='has-children'><a href='portable_hybrid.html'>portable_hybrid</a><ul class='dropdown'><li><a href='安西 C.html'>安西 C</a><li><a href='C-註釋.html'>C-註釋</a><li><a href='Pyslvs-UI.html'>Pyslvs-UI</a></li></ul><li><a href='GitExtensions.html'>GitExtensions</a><li><a href='run.html'>run</a><li><a href='runsrc.html'>runsrc</a><li><a href='Snake.html'>Snake</a><li><a href='SSH.html'>SSH</a><li class='has-children'><a href='Network.html'>Network</a><ul class='dropdown'><li><a href='Fossil Server.html'>Fossil Server</a></li></li></ul></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='Token.html'>Token</a><li><a href='SSH push.html'>SSH push</a></li></ul><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li><a href='Python.html'>Python</a><li><a href='run1.html'>run1</a><li><a href='run2.html'>run2</a><li><a href='run3.html'>run3</a><li><a href='Server.html'>Server</a><li><a href='W11-1.html'>W11-1</a><li><a href='W12-1.html'>W12-1</a></li></ul><li class='has-children'><a href='W10.html'>W10</a><ul class='dropdown'><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='W11 demo.html'>W11 demo</a><li><a href='W12 demo.html'>W12 demo</a></li></ul><li><a href='Examples.html'>Examples</a><li><a href='Snakey.html'>Snakey</a><li><a href='W12.html'>W12</a></li></ul><li class='has-children'><a href='Exam.html'>Exam</a><ul class='dropdown'><li><a href='W13.html'>W13</a></li></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li class='has-children'><a href='Algorithms.html'>Algorithms</a><ul class='dropdown'><li><a href='Practice1.html'>Practice1</a><li><a href='Practice2.html'>Practice2</a><li><a href='Practice3.html'>Practice3</a></li></ul><li><a href='Path Finding.html'>Path Finding</a><li><a href='ML in Brython.html'>ML in Brython</a><li><a href='Math.html'>Math</a></li></ul><li><a href='Final Project.html'>Final Project</a></li>
                       </ul>
                 </nav>
               </div>
@@ -140,19 +140,19 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">SSH << <a href='SSH.html'>Previous</a> <a href='Fossil Server.html'>Next</a> >> Fossil Server<br /><h1>Network</h1>
-<p>當電腦輔助設計室中, 將連外網路由 NAT 轉為直接連到 Backbone 後, 可能因為電腦中所安裝的套件問題, 會因直接網路連外, 導致外部電腦試圖透過 ARP 快取進行破壞攻擊, 因此必須設法中止此一攻擊, 並且能利用 IPv6 網路協定上網.</p>
+<p _msthash="170749" _msttexthash="1964276366">當電腦輔助設計室中, 將連外網路由 NAT 轉為直接連到 Backbone 後, 可能因為電腦中所安裝的套件問題, 會因直接網路連外, 導致外部電腦試圖透過 ARP 快取進行破壞攻擊, 因此必須設法中止此一攻擊, 並且能利用 IPv6 網路協定上網.</p>
 <p><img alt="" height="275" src="./../images/cadlab_network_problem.png" width="400"/></p>
-<p>面對此一網路威脅的處理方法, 就是在純 IPv6 網路協定下, 讓電腦中所安裝的潛在問題套件無法透過系統的 Proxy 設定連網:</p>
+<p _msthash="170750" _msttexthash="616915039">面對此一網路威脅的處理方法, 就是在純 IPv6 網路協定下, 讓電腦中所安裝的潛在問題套件無法透過系統的 Proxy 設定連網:</p>
 <ol>
-<li>關閉 Windows 操作系統的網路代理主機設定</li>
-<li>關閉 IPv4 網路協定</li>
-<li>設定 IPv6 的 DNS 伺服器, 2001:b000:168::1</li>
-<li>針對瀏覽器與 git 客戶端, 分別設定能從純 IPv6 轉往只支援 IPv4 網路協定的代理主機.</li>
+<li _msthash="316025" _msttexthash="111901075">關閉 Windows 操作系統的網路代理主機設定</li>
+<li _msthash="316026" _msttexthash="28604667">關閉 IPv4 網路協定</li>
+<li _msthash="316027" _msttexthash="27330069">設定 IPv6 的 DNS 伺服器, 2001:b000:168::1</li>
+<li _msthash="316028" _msttexthash="292005259">針對瀏覽器與 git 客戶端, 分別設定能從純 IPv6 轉往只支援 IPv4 網路協定的代理主機.</li>
 </ol>
-<p>git 的網路代理主機設定 git config --global http.proxy <a href="http://[Proxy_ip_address]:3128">http://[Proxy_ip_address]:3128</a></p>
-<h4>Computer Networks:</h4>
-<p style="padding-left: 30px;">相關開放電子書: <a href="http://intronetworks.cs.luc.edu/current1/html/">http://intronetworks.cs.luc.edu/current1/html/</a></p>
-<p style="padding-left: 60px;">其他格式: <a href="https://open.umn.edu/opentextbooks/textbooks/an-introduction-to-computer-networks">https://open.umn.edu/opentextbooks/textbooks/an-introduction-to-computer-networks</a></p>
+<p _msthash="170751" _msttexthash="49220483">git 的網路代理主機設定 git config --global http.proxy <a href="http://[Proxy_ip_address]:3128">http://[Proxy_ip_address]:3128</a></p>
+<h4 _msthash="187740" _msttexthash="343798">Computer Networks:</h4>
+<p _msthash="170752" _msttexthash="30394468" style="padding-left: 30px;">相關開放電子書: <a href="http://intronetworks.cs.luc.edu/current1/html/">http://intronetworks.cs.luc.edu/current1/html/</a></p>
+<p _msthash="170753" _msttexthash="15881632" style="padding-left: 60px;">其他格式: <a href="https://open.umn.edu/opentextbooks/textbooks/an-introduction-to-computer-networks">https://open.umn.edu/opentextbooks/textbooks/an-introduction-to-computer-networks</a></p>
 <br />SSH << <a href='SSH.html'>Previous</a> <a href='Fossil Server.html'>Next</a> >> Fossil Server</div>
         
     <!-- footer -->
