--- a/content/W12.html
+++ b/content/W12.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='portable_hybrid.html'>portable_hybrid</a><ul class='dropdown'><li><a href='ANSI C.html'>ANSI C</a><li><a href='C-notes.html'>C-notes</a><li><a href='Pyslvs-UI.html'>Pyslvs-UI</a></li></ul><li><a href='GitExtensions.html'>GitExtensions</a><li><a href='run.html'>run</a><li><a href='runsrc.html'>runsrc</a><li><a href='Snake.html'>Snake</a><li><a href='SSH.html'>SSH</a><li class='has-children'><a href='Network.html'>Network</a><ul class='dropdown'><li><a href='Fossil Server.html'>Fossil Server</a></li></li></ul></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='Token.html'>Token</a><li><a href='SSH push.html'>SSH push</a></li></ul><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li><a href='Python.html'>Python</a><li><a href='run1.html'>run1</a><li><a href='run2.html'>run2</a><li><a href='run3.html'>run3</a><li><a href='Server.html'>Server</a><li><a href='W11-1.html'>W11-1</a><li><a href='W12-1.html'>W12-1</a></li></ul><li class='has-children'><a href='W10.html'>W10</a><ul class='dropdown'><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='W11 demo.html'>W11 demo</a><li><a href='W12 demo.html'>W12 demo</a></li></ul><li><a href='Examples.html'>Examples</a><li><a href='Snakey.html'>Snakey</a><li><a href='W12.html'>W12</a></li></ul><li class='has-children'><a href='Exam.html'>Exam</a><ul class='dropdown'><li><a href='W13.html'>W13</a></li></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li class='has-children'><a href='Algorithms.html'>Algorithms</a><ul class='dropdown'><li><a href='Practice1.html'>Practice1</a><li><a href='Practice2.html'>Practice2</a><li><a href='Practice3.html'>Practice3</a></li></ul><li><a href='Path Finding.html'>Path Finding</a><li><a href='ML in Brython.html'>ML in Brython</a><li><a href='Math.html'>Math</a></li></ul><li><a href='Final Project.html'>Final Project</a></li>
+                     <li class='has-children'><a href='大約.html'>大約</a><ul class='dropdown'><li class='has-children'><a href='portable_hybrid.html'>portable_hybrid</a><ul class='dropdown'><li><a href='安西 C.html'>安西 C</a><li><a href='C-註釋.html'>C-註釋</a><li><a href='Pyslvs-UI.html'>Pyslvs-UI</a></li></ul><li><a href='GitExtensions.html'>GitExtensions</a><li><a href='run.html'>run</a><li><a href='runsrc.html'>runsrc</a><li><a href='Snake.html'>Snake</a><li><a href='SSH.html'>SSH</a><li class='has-children'><a href='Network.html'>Network</a><ul class='dropdown'><li><a href='Fossil Server.html'>Fossil Server</a></li></li></ul></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='Token.html'>Token</a><li><a href='SSH push.html'>SSH push</a></li></ul><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li><a href='Python.html'>Python</a><li><a href='run1.html'>run1</a><li><a href='run2.html'>run2</a><li><a href='run3.html'>run3</a><li><a href='Server.html'>Server</a><li><a href='W11-1.html'>W11-1</a><li><a href='W12-1.html'>W12-1</a></li></ul><li class='has-children'><a href='W10.html'>W10</a><ul class='dropdown'><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='W11 demo.html'>W11 demo</a><li><a href='W12 demo.html'>W12 demo</a></li></ul><li><a href='Examples.html'>Examples</a><li><a href='Snakey.html'>Snakey</a><li><a href='W12.html'>W12</a></li></ul><li class='has-children'><a href='Exam.html'>Exam</a><ul class='dropdown'><li><a href='W13.html'>W13</a></li></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li class='has-children'><a href='Algorithms.html'>Algorithms</a><ul class='dropdown'><li><a href='Practice1.html'>Practice1</a><li><a href='Practice2.html'>Practice2</a><li><a href='Practice3.html'>Practice3</a></li></ul><li><a href='Path Finding.html'>Path Finding</a><li><a href='ML in Brython.html'>ML in Brython</a><li><a href='Math.html'>Math</a></li></ul><li><a href='Final Project.html'>Final Project</a></li>
                       </ul>
                 </nav>
               </div>
@@ -140,14 +140,14 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Snakey << <a href='Snakey.html'>Previous</a> <a href='Exam.html'>Next</a> >> Exam<br /><h1>W12</h1>
-<p><a href="https://mde.tw/cp2019/downloads/Why%20Fossil-SCM%20is%20an%20excellent%20choice%20for%20introductory%20programming%20courses.pdf">Why Fossil SCM is an excellent choice for introductory programming courses</a></p>
-<p><a href="http://brandon.invergo.net/news/2013-07-11-A-quick-introduction-to-version-control-with-Fossil.html">http://brandon.invergo.net/news/2013-07-11-A-quick-introduction-to-version-control-with-Fossil.html</a></p>
-<p><a href="https://fossil-scm.org/home/doc/trunk/www/quickstart.wiki">https://fossil-scm.org/home/doc/trunk/www/quickstart.wiki</a></p>
-<p><a href="https://fossil-scm.org/home/doc/trunk/www/th1.md">https://fossil-scm.org/home/doc/trunk/www/th1.md</a></p>
-<p><a href="https://www.fossil-scm.org/home/doc/trunk/www/adding_code.wiki">https://www.fossil-scm.org/home/doc/trunk/www/adding_code.wiki</a></p>
-<p><a href="http://www.beedub.com/book/tkbook.pdf">http://www.beedub.com/book/tkbook.pdf</a></p>
-<p><a href="https://support-kb.spirent.com/resources/sites/SPIRENT/content/live/TRAINING/10000/TRN10235/en_US/Essentials_of_TCL_V2.pdf">Essentials of TCL</a></p>
-<p>最原始的 Snakey.py 是在 CPython 命令列中, 利用 <a href="https://docs.python.org/3/howto/curses.html">Python curses</a> 執行. 這裡將要逐步改為能透過 Brython 直接在網頁中執行. 初步將無法在 Brython 環境運作的程式碼轉為 comment 的 <a href="https://gist.githubusercontent.com/mdecourse/d55158478f4f8fcbfedd455f8be8c7b6/raw/706bb9583d97f2e4b8e9027e686489e28f43cad9/snakey.py">Snakey.py</a>.</p>
+<p><a _msthash="171410" _msttexthash="3455972" href="https://mde.tw/cp2019/downloads/Why%20Fossil-SCM%20is%20an%20excellent%20choice%20for%20introductory%20programming%20courses.pdf">Why Fossil SCM is an excellent choice for introductory programming courses</a></p>
+<p><a _msthash="171411" _msttexthash="6812286" href="http://brandon.invergo.net/news/2013-07-11-A-quick-introduction-to-version-control-with-Fossil.html">http://brandon.invergo.net/news/2013-07-11-A-quick-introduction-to-version-control-with-Fossil.html</a></p>
+<p><a _msthash="171412" _msttexthash="2578615" href="https://fossil-scm.org/home/doc/trunk/www/quickstart.wiki">https://fossil-scm.org/home/doc/trunk/www/quickstart.wiki</a></p>
+<p><a _msthash="171413" _msttexthash="1780870" href="https://fossil-scm.org/home/doc/trunk/www/th1.md">https://fossil-scm.org/home/doc/trunk/www/th1.md</a></p>
+<p><a _msthash="171414" _msttexthash="2947048" href="https://www.fossil-scm.org/home/doc/trunk/www/adding_code.wiki">https://www.fossil-scm.org/home/doc/trunk/www/adding_code.wiki</a></p>
+<p><a _msthash="171415" _msttexthash="1149798" href="http://www.beedub.com/book/tkbook.pdf">http://www.beedub.com/book/tkbook.pdf</a></p>
+<p><a _msthash="171416" _msttexthash="266344" href="https://support-kb.spirent.com/resources/sites/SPIRENT/content/live/TRAINING/10000/TRN10235/en_US/Essentials_of_TCL_V2.pdf">Essentials of TCL</a></p>
+<p _msthash="171417" _msttexthash="1159051426">最原始的 Snakey.py 是在 CPython 命令列中, 利用 <a href="https://docs.python.org/3/howto/curses.html">Python curses</a> 執行. 這裡將要逐步改為能透過 Brython 直接在網頁中執行. 初步將無法在 Brython 環境運作的程式碼轉為 comment 的 <a href="https://gist.githubusercontent.com/mdecourse/d55158478f4f8fcbfedd455f8be8c7b6/raw/706bb9583d97f2e4b8e9027e686489e28f43cad9/snakey.py">Snakey.py</a>.</p>
 <!-- 導入 brython 程式庫 -->
 <script src="./../cmsimde/static/brython.js"></script>
 <script src="./../cmsimde/static/brython_stdlib.js"></script>
@@ -181,7 +181,7 @@ function doSave(storage_id, filename){
 </p>
 <p><!-- 內建程式碼導入--></p>
 <!-- 以按鈕導入 snakey.py 程式碼 -->
-<p><button id="do_snakey">Snakey</button></p>
+<p><button _msthash="137631" _msttexthash="77571" id="do_snakey">Snakey</button></p>
 <p>
 <script type="text/python3">
 from browser import document as doc
@@ -245,10 +245,10 @@ run()
 <p><!-- 用來顯示程式碼的 editor 區域 --></p>
 <div id="kw_editor" style="width: 600px; height: 300px;"></div>
 <p><!-- 以下的表單與按鈕與前面的 Javascript doSave 函式以及 FileSaver.min.js 互相配合 --></p>
-<!-- 存擋表單開始 --><form><label>Filename: <input id="kw_filename" placeholder="input file name" type="text"/>.py</label> <input onclick="doSave('kw_py_src', 'kw_filename');" type="submit" value="Save"/></form><!-- 存擋表單結束 -->
+<!-- 存擋表單開始 --><form><label _msthash="246832" _msttexthash="184665">Filename: <input id="kw_filename" placeholder="input file name" type="text"/>.py</label> <input _mstvalue="44577" onclick="doSave('kw_py_src', 'kw_filename');" type="submit" value="Save"/></form><!-- 存擋表單結束 -->
 <p></p>
 <!-- 執行與清除按鈕開始 -->
-<p><button id="kw_run">Run</button> <button id="kw_show_console">Output</button> <button id="kw_clear_console">清除輸出區</button><button id="clear_bd">清除繪圖區</button><button onclick="window.location.reload()">Reload</button></p>
+<p><button _msthash="81941" _msttexthash="32500" id="kw_run">Run</button> <button _msthash="294452" _msttexthash="82316" id="kw_show_console">Output</button> <button _msthash="319464" _msttexthash="16632499" id="kw_clear_console">清除輸出區</button><button _msthash="110554" _msttexthash="16299205" id="clear_bd">清除繪圖區</button><button _msthash="414363" _msttexthash="74503" onclick="window.location.reload()">Reload</button></p>
 <!-- 執行與清除按鈕結束 -->
 <p></p>
 <!-- 程式執行 ouput 區 -->
@@ -262,10 +262,10 @@ run()
 <script src="https://mde.tw/cp2021/cmsimde/static/sylvester.js"></script>
 <script src="https://mde.tw/cp2021/cmsimde/static/PrairieDraw.js"></script>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/HNf3fD9Dg9A" title="YouTube video player" width="560"></iframe></p>
-<h4>References:</h4>
-<p style="padding-left: 30px;"><a href="https://blog.csdn.net/fox64194167/article/details/19965069">https://blog.csdn.net/fox64194167/article/details/19965069</a></p>
-<p style="padding-left: 30px;"><a href="http://www.waitingfy.com/archives/846">http://www.waitingfy.com/archives/846</a></p>
-<p style="padding-left: 30px;"><a href="https://github.com/mdecourse/snake-4">https://github.com/mdecourse/snake-4</a></p>
+<h4 _msthash="188514" _msttexthash="168129">References:</h4>
+<p style="padding-left: 30px;"><a _msthash="171418" _msttexthash="2129595" href="https://blog.csdn.net/fox64194167/article/details/19965069">https://blog.csdn.net/fox64194167/article/details/19965069</a></p>
+<p style="padding-left: 30px;"><a _msthash="171419" _msttexthash="1095666" href="http://www.waitingfy.com/archives/846">http://www.waitingfy.com/archives/846</a></p>
+<p style="padding-left: 30px;"><a _msthash="171420" _msttexthash="1074320" href="https://github.com/mdecourse/snake-4">https://github.com/mdecourse/snake-4</a></p>
 <br />Snakey << <a href='Snakey.html'>Previous</a> <a href='Exam.html'>Next</a> >> Exam</div>
         
     <!-- footer -->
