--- a/content/W13.html
+++ b/content/W13.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='portable_hybrid.html'>portable_hybrid</a><ul class='dropdown'><li><a href='ANSI C.html'>ANSI C</a><li><a href='C-notes.html'>C-notes</a><li><a href='Pyslvs-UI.html'>Pyslvs-UI</a></li></ul><li><a href='GitExtensions.html'>GitExtensions</a><li><a href='run.html'>run</a><li><a href='runsrc.html'>runsrc</a><li><a href='Snake.html'>Snake</a><li><a href='SSH.html'>SSH</a><li class='has-children'><a href='Network.html'>Network</a><ul class='dropdown'><li><a href='Fossil Server.html'>Fossil Server</a></li></li></ul></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='Token.html'>Token</a><li><a href='SSH push.html'>SSH push</a></li></ul><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li><a href='Python.html'>Python</a><li><a href='run1.html'>run1</a><li><a href='run2.html'>run2</a><li><a href='run3.html'>run3</a><li><a href='Server.html'>Server</a><li><a href='W11-1.html'>W11-1</a><li><a href='W12-1.html'>W12-1</a></li></ul><li class='has-children'><a href='W10.html'>W10</a><ul class='dropdown'><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='W11 demo.html'>W11 demo</a><li><a href='W12 demo.html'>W12 demo</a></li></ul><li><a href='Examples.html'>Examples</a><li><a href='Snakey.html'>Snakey</a><li><a href='W12.html'>W12</a></li></ul><li class='has-children'><a href='Exam.html'>Exam</a><ul class='dropdown'><li><a href='W13.html'>W13</a></li></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li class='has-children'><a href='Algorithms.html'>Algorithms</a><ul class='dropdown'><li><a href='Practice1.html'>Practice1</a><li><a href='Practice2.html'>Practice2</a><li><a href='Practice3.html'>Practice3</a></li></ul><li><a href='Path Finding.html'>Path Finding</a><li><a href='ML in Brython.html'>ML in Brython</a><li><a href='Math.html'>Math</a></li></ul><li><a href='Final Project.html'>Final Project</a></li>
+                     <li class='has-children'><a href='大約.html'>大約</a><ul class='dropdown'><li class='has-children'><a href='portable_hybrid.html'>portable_hybrid</a><ul class='dropdown'><li><a href='安西 C.html'>安西 C</a><li><a href='C-註釋.html'>C-註釋</a><li><a href='Pyslvs-UI.html'>Pyslvs-UI</a></li></ul><li><a href='GitExtensions.html'>GitExtensions</a><li><a href='run.html'>run</a><li><a href='runsrc.html'>runsrc</a><li><a href='Snake.html'>Snake</a><li><a href='SSH.html'>SSH</a><li class='has-children'><a href='Network.html'>Network</a><ul class='dropdown'><li><a href='Fossil Server.html'>Fossil Server</a></li></li></ul></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='Token.html'>Token</a><li><a href='SSH push.html'>SSH push</a></li></ul><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li><a href='Python.html'>Python</a><li><a href='run1.html'>run1</a><li><a href='run2.html'>run2</a><li><a href='run3.html'>run3</a><li><a href='Server.html'>Server</a><li><a href='W11-1.html'>W11-1</a><li><a href='W12-1.html'>W12-1</a></li></ul><li class='has-children'><a href='W10.html'>W10</a><ul class='dropdown'><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='W11 demo.html'>W11 demo</a><li><a href='W12 demo.html'>W12 demo</a></li></ul><li><a href='Examples.html'>Examples</a><li><a href='Snakey.html'>Snakey</a><li><a href='W12.html'>W12</a></li></ul><li class='has-children'><a href='Exam.html'>Exam</a><ul class='dropdown'><li><a href='W13.html'>W13</a></li></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li class='has-children'><a href='Algorithms.html'>Algorithms</a><ul class='dropdown'><li><a href='Practice1.html'>Practice1</a><li><a href='Practice2.html'>Practice2</a><li><a href='Practice3.html'>Practice3</a></li></ul><li><a href='Path Finding.html'>Path Finding</a><li><a href='ML in Brython.html'>ML in Brython</a><li><a href='Math.html'>Math</a></li></ul><li><a href='Final Project.html'>Final Project</a></li>
                       </ul>
                 </nav>
               </div>
@@ -140,26 +140,26 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Exam << <a href='Exam.html'>Previous</a> <a href='HW3.html'>Next</a> >> HW3<br /><h1>W13</h1>
-<p><span style="background-color: #ffff99;">1b:</span></p>
-<p dir="auto" style="padding-left: 30px;">請在個人的 cp2021_hw 網頁上加上一個 H1 頁面, 標題為 Exam, 在其下加入一個 H2 的 W13 頁面, 將下列程式寫在個人的 gist 後, 導入執行.</p>
-<p dir="auto" style="padding-left: 30px;">題目一: 請使用 random 模組, 以隨機方式列出六行文字如下:</p>
-<p dir="auto" style="padding-left: 30px;">第 1 排隨機列出的序號為 3.<br/>......<br/>......</p>
-<p dir="auto" style="padding-left: 30px;">題目二: 請使用 random 模組, 以隨機方式列出六行文字如下:</p>
-<p dir="auto" style="padding-left: 30px;">第一排隨機列出的序號為 3.<br/>......<br/>......</p>
-<p dir="auto" style="padding-left: 30px;">, 完成後將個人網頁連結留在<a href="https://github.com/mdecourse/cp2021/discussions/17">下列回應</a>, 並說明心得.</p>
-<p dir="auto"><span style="background-color: #ffff99;">1a:</span></p>
-<p dir="auto" style="padding-left: 30px;">請分別利用 random 模組中的 randint(), for 迴圈, range() 函式, 以及 str() 轉字串函式, 列出 10 行文字:</p>
-<p dir="auto" style="padding-left: 30px;">在 18X18 的方格中以按鈕程式, 文字為"列出 10 個座標", 放在個人作業網站中的 Exam (H1) 頁面下的 W13 (H2) 頁面.</p>
-<p dir="auto" style="padding-left: 30px;">執行後文字如下:</p>
-<p dir="auto" style="padding-left: 30px;">第 1 個紅色方塊座標為 (10, 5).<br/>......</p>
-<p dir="auto" style="padding-left: 30px;">......</p>
-<p dir="auto" style="padding-left: 30px;">程式完成後, 請推向個人網頁後, 在下列回應中列出網站連結與心得.</p>
-<p dir="auto" style="padding-left: 30px;">延伸應用:</p>
-<p dir="auto" style="padding-left: 30px;">根據<a href="https://mde.tw/cp2021/content/%E7%95%AB%E5%87%BA%E5%BA%A7%E4%BD%8D%E8%A1%A8.html" rel="nofollow">畫出座位表</a>中的程式範例, 能否在 720 pixel x 720 pixel 的畫面中, 以黑色 1 pixel 的直線畫出 18 乘以 18 個方格圖形, 並在上述程式所產生的隨機座標方格中, 以阿拉伯數字按照數字順序, 標示 (以文字繪出) 在各 40 pixel x 40 pixel 方格中.</p>
-<p dir="auto">如何將程式寫在 gist 並用按鈕帶出執行?</p>
-<p dir="auto">random.randint() 用法? for 迴圈用法? range() 用法? str() 用法?</p>
-<p dir="auto">在頁面中以 Brython 畫直線方法? 畫出字串方法?</p>
-<p dir="auto">假如再加上 <a href="https://brython.info/static_doc/en/timer.html">https://brython.info/static_doc/en/timer.html</a> 的用法, 能否採隨機方式每間隔一段時間, 將隨機座標中的方格塗上紅色?</p>
+<p><span _msthash="171421" _msttexthash="21437" style="background-color: #ffff99;">1b:</span></p>
+<p _msthash="171422" _msttexthash="610800606" dir="auto" style="padding-left: 30px;">請在個人的 cp2021_hw 網頁上加上一個 H1 頁面, 標題為 Exam, 在其下加入一個 H2 的 W13 頁面, 將下列程式寫在個人的 gist 後, 導入執行.</p>
+<p _msthash="171423" _msttexthash="160458038" dir="auto" style="padding-left: 30px;">題目一: 請使用 random 模組, 以隨機方式列出六行文字如下:</p>
+<p _msthash="171424" _msttexthash="45570824" dir="auto" style="padding-left: 30px;">第 1 排隨機列出的序號為 3.<br/>......<br/>......</p>
+<p _msthash="171425" _msttexthash="160474418" dir="auto" style="padding-left: 30px;">題目二: 請使用 random 模組, 以隨機方式列出六行文字如下:</p>
+<p _msthash="171426" _msttexthash="47642400" dir="auto" style="padding-left: 30px;">第一排隨機列出的序號為 3.<br/>......<br/>......</p>
+<p _msthash="171427" _msttexthash="129907401" dir="auto" style="padding-left: 30px;">, 完成後將個人網頁連結留在<a href="https://github.com/mdecourse/cp2021/discussions/17">下列回應</a>, 並說明心得.</p>
+<p dir="auto"><span _msthash="171428" _msttexthash="21333" style="background-color: #ffff99;">1a:</span></p>
+<p _msthash="171429" _msttexthash="322633506" dir="auto" style="padding-left: 30px;">請分別利用 random 模組中的 randint(), for 迴圈, range() 函式, 以及 str() 轉字串函式, 列出 10 行文字:</p>
+<p _msthash="171430" _msttexthash="416659139" dir="auto" style="padding-left: 30px;">在 18X18 的方格中以按鈕程式, 文字為"列出 10 個座標", 放在個人作業網站中的 Exam (H1) 頁面下的 W13 (H2) 頁面.</p>
+<p _msthash="171431" _msttexthash="22224007" dir="auto" style="padding-left: 30px;">執行後文字如下:</p>
+<p _msthash="171432" _msttexthash="37977615" dir="auto" style="padding-left: 30px;">第 1 個紅色方塊座標為 (10, 5).<br/>......</p>
+<p _msthash="171433" _msttexthash="34086" dir="auto" style="padding-left: 30px;">......</p>
+<p _msthash="171434" _msttexthash="210820870" dir="auto" style="padding-left: 30px;">程式完成後, 請推向個人網頁後, 在下列回應中列出網站連結與心得.</p>
+<p _msthash="171435" _msttexthash="11157445" dir="auto" style="padding-left: 30px;">延伸應用:</p>
+<p _msthash="171436" _msttexthash="1767281009" dir="auto" style="padding-left: 30px;">根據<a href="https://mde.tw/cp2021/content/%E7%95%AB%E5%87%BA%E5%BA%A7%E4%BD%8D%E8%A1%A8.html" rel="nofollow">畫出座位表</a>中的程式範例, 能否在 720 pixel x 720 pixel 的畫面中, 以黑色 1 pixel 的直線畫出 18 乘以 18 個方格圖形, 並在上述程式所產生的隨機座標方格中, 以阿拉伯數字按照數字順序, 標示 (以文字繪出) 在各 40 pixel x 40 pixel 方格中.</p>
+<p _msthash="171437" _msttexthash="82475822" dir="auto">如何將程式寫在 gist 並用按鈕帶出執行?</p>
+<p _msthash="171438" _msttexthash="133386461" dir="auto">random.randint() 用法? for 迴圈用法? range() 用法? str() 用法?</p>
+<p _msthash="171439" _msttexthash="109248022" dir="auto">在頁面中以 Brython 畫直線方法? 畫出字串方法?</p>
+<p _msthash="171440" _msttexthash="818685725" dir="auto">假如再加上 <a href="https://brython.info/static_doc/en/timer.html">https://brython.info/static_doc/en/timer.html</a> 的用法, 能否採隨機方式每間隔一段時間, 將隨機座標中的方格塗上紅色?</p>
 <!-- 導入 brython 程式庫 -->
 <script src="./../cmsimde/static/brython.js"></script>
 <script src="./../cmsimde/static/brython_stdlib.js"></script>
@@ -198,17 +198,17 @@ function doSave(storage_id, filename){
 <script src="https://mde.tw/cp2021/cmsimde/static/sylvester.js"></script>
 <script src="https://mde.tw/cp2021/cmsimde/static/PrairieDraw.js"></script>
 </p>
-<p><button id="add1to100">add 1 to 100</button><button id="p261">p261</button><button id="rocflag">ROC flag</button></p>
+<p><button _msthash="97583" _msttexthash="97578" id="add1to100">add 1 to 100</button><button _msthash="28084" _msttexthash="28080" id="p261">p261</button><button _msthash="94746" _msttexthash="84760" id="rocflag">ROC flag</button></p>
 <p><!-- ######################  editor1 開始 ###################### --></p>
 <p><!-- 用來顯示程式碼的 editor 區域 --></p>
 <div id="kw_editor1" style="width: 600px; height: 300px;"></div>
 <p><!-- 以下的表單與按鈕與前面的 Javascript doSave 函式以及 FileSaver.min.js 互相配合 --></p>
 <p><!-- 存擋表單開始 --></p>
-<form><label>Filename: <input id="kw_filename" placeholder="input file name" type="text"/>.py</label> <input onclick="doSave('kw_py_src1', 'kw_filename1');" type="submit" value="Save"/></form>
+<form><label _msthash="246833" _msttexthash="184665">Filename: <input id="kw_filename" placeholder="input file name" type="text"/>.py</label> <input _mstvalue="44577" onclick="doSave('kw_py_src1', 'kw_filename1');" type="submit" value="Save"/></form>
 <p><!-- 存擋表單結束 --></p>
 <p></p>
 <p><!-- 執行與清除按鈕開始 --></p>
-<p><button id="kw_run1">Run</button> <button id="kw_show_console1">Output</button> <button id="kw_clear_console1">清除輸出區</button><button id="clear_bd1">清除繪圖區</button><button onclick="window.location.reload()">Reload</button></p>
+<p><button _msthash="90225" _msttexthash="32500" id="kw_run1">Run</button> <button _msthash="308469" _msttexthash="82316" id="kw_show_console1">Output</button> <button _msthash="334118" _msttexthash="16632499" id="kw_clear_console1">清除輸出區</button><button _msthash="120112" _msttexthash="16299205" id="clear_bd1">清除繪圖區</button><button _msthash="414364" _msttexthash="74503" onclick="window.location.reload()">Reload</button></p>
 <p><!-- 執行與清除按鈕結束 --></p>
 <p></p>
 <p><!-- 程式執行 ouput 區 --></p>
@@ -294,7 +294,8 @@ rocflag = button2(rocflag_url)
 doc["rocflag"].bind("click", rocflag.do)
 ################################## rocflag end
 </script>
-</p><br />Exam << <a href='Exam.html'>Previous</a> <a href='HW3.html'>Next</a> >> HW3</div>
+</p>
+<br />Exam << <a href='Exam.html'>Previous</a> <a href='HW3.html'>Next</a> >> HW3</div>
         
     <!-- footer -->
       <div class="container">
