--- a/content/大約.html
+++ b/content/大約.html
@@ -2,7 +2,7 @@
         <head>
         <title>cp2021 homework site</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -139,9 +139,38 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Examples << <a href='Examples.html'>Previous</a> <a href='W12.html'>Next</a> >> W12<br /><h1>Snakey</h1>
-<p style="padding-left: 30px;"><a _msthash="171409" _msttexthash="548470" href="https://onlinejudge.org/">https://onlinejudge.org/</a></p>
-<br />Examples << <a href='Examples.html'>Previous</a> <a href='W12.html'>Next</a> >> W12</div>
+    <div id="tipue_search_content"> <a href='portable_hybrid.html'>Next</a> >> portable_hybrid<br /><h1>大約</h1>
+<p _msthash="170586" _msttexthash="2203185751">工程師在解決問題之前， 會<span _istranslated="1" style="background-color: #ffff99;">先找資料</span>， 看看這些問題是否已經有人提出解決方案， 接著再<span _istranslated="1" style="background-color: #ffff99;">分析資料</span>是否能夠用來解決自己所面臨的問題， 假如該方案適合用來解決問題， 還必須判斷能否能直接引用該方案， 有沒有適法性的問題</p>
+<p _msthash="170587" _msttexthash="1206856573">假如既存方案可以解決問題， 且沒有適法性問題， 接下來應該思考， 能否獨力或結合其他團隊成員，<span _istranslated="1" style="background-color: #ffff99;">打造工具</span>， 讓使用者爾後碰到相同或類似問題， 可以更方便解題.</p>
+<p _msthash="170588" _msttexthash="201144788">W8 配合電腦輔助設計室所建立的<a _istranslated="1" href="https://drive.google.com/file/d/1MwUQNWATIgwWoT--HELUHcepNsNi4uTP/view?usp=sharing">portable_hybrid.7z</a>可攜程式環境系統.</p>
+<p _msthash="170589" _msttexthash="219269947"><a _istranslated="1" href="https://drive.google.com/file/d/1MwUQNWATIgwWoT--HELUHcepNsNi4uTP/view?usp=sharing">portable_hybrid.7z</a>下載檔案約 350MB， 解開壓縮檔案後約為 1GB.</p>
+<p _msthash="170590" _msttexthash="76235991" style="padding-left: 30px;">註： portable_hybrid.7z 是儲存在 2021fall At mde 的 GDrive 中.</p>
+<p><span _msthash="170591" _msttexthash="182743470" style="background-color: #ffff99;">是的， 重點在於您希望建立何種樣貌的學習歷程檔案？</span></p>
+<p _msthash="170592" _msttexthash="259503153">假如進入大學學習是一段<a _istranslated="1" href="https://www.oxfordlearnersdictionaries.com/definition/english/journey_1?q=journey">Journey</a>， 您希望踏上一段什麼樣子的旅程？</p>
+<p _msthash="170593" _msttexthash="87154626">是讓人回味無窮？抑或悔不當初？</p>
+<p _msthash="170594" _msttexthash="102853777">何謂<a _istranslated="1" href="https://www.oxfordlearnersdictionaries.com/definition/english/academic_1?q=academic">學術</a><a _istranslated="1" href="https://www.oxfordlearnersdictionaries.com/definition/english/portfolio">組合</a>（學習歷程檔案）？</p>
+<p _msthash="170595" _msttexthash="3641880359" style="padding-left: 30px;">academic 可翻譯為學術的， 而 portfolio 指的是文件檔案夾， 可以引申為資料或檔案的組合， 假如又將這些資料的創建時間納入， 也可以將 portfolio 稱為歷程檔案組合， 所以學術 portfolio 就被翻譯為學術歷程檔案， 或學習歷程檔案， 在此<span _istranslated="1" style="background-color: #ccffcc;">學術 portofolio 特稱為大學時期與學習有關的歷程檔案組合</span>.</p>
+<p _msthash="170596" _msttexthash="1210902511" style="padding-left: 30px;">學術 portfolio 內容就是專業核心課程學習歷程的綜合呈現， 未無論來是求職或研究所推甄， 學習歷程檔案就是可用來評量申請者是否符合過關要求的重要指標.</p>
+<p style="padding-left: 30px;"><a _msthash="170597" _msttexthash="16739931" href="https://www.uts.edu.au/research-and-teaching/learning-and-teaching/scholarship-and-research/scholarship-learning-and-teaching/developing-academic-portfolio">https://www.uts.edu.au/research-and-teaching/learning-and-teaching/scholarship-and-research/scholarship-learning-and-teaching/developing-academic-portfolio</a></p>
+<p _msthash="170598" _msttexthash="3034824351" style="padding-left: 60px;">作品集通過創建您隨著時間的推移的反思（反思），發展（開發，拓展）和成就（成果，成就）的記錄來支援您作為學者的角色。您可能希望使用投資組合的各個方面（面向）為正式試用期審查，進步（進展）或晉陞（升職）過程提供證據（證據）。</p>
+<p style="padding-left: 30px;"><a _msthash="170599" _msttexthash="2167867" href="https://www.hr.uwa.edu.au/working/academic/portfolio">https://www.hr.uwa.edu.au/working/academic/portfolio</a></p>
+<p _msthash="170600" _msttexthash="1314791179" style="padding-left: 60px;">學術作品集是你的主要活動和成就（成果）的摘要，記錄了你貢獻的性質和程度，以及你的角色和成就。它有三個主要組成部分（或作品集），由您的簡歷（CV）支援。</p>
+<p _msthash="170601" _msttexthash="557519885" style="padding-left: 60px;">這裡指的三項學術歷程檔案， 即教學 （包括教課與學習）， 研究 （research） 與服務等三項工作內容的組合.</p>
+<p _msthash="170602" _msttexthash="301039388" style="padding-left: 60px;">教學 - 課程內容有沒有與時俱進， 逐步提升內容與教學方法， 以符合時代要求.</p>
+<p _msthash="170603" _msttexthash="276423329" style="padding-left: 60px;">研究 - 對於所開設的課程或與業界相關的研究主題， 是否持續鑽研探究.</p>
+<p _msthash="170604" _msttexthash="128878828" style="padding-left: 60px;">服務 - 是否將教學與研究成果， 提供給公眾使用.</p>
+<p style="padding-left: 30px;"><a _msthash="170605" _msttexthash="3644069" href="https://www.utu.fi/en/university/come-work-with-us/academic-portfolio">https://www.utu.fi/en/university/come-work-with-us/academic-portfolio</a></p>
+<p _msthash="170606" _msttexthash="6586158072" style="padding-left: 60px;">一個好的投資組合是全面的（（（範圍）全面），簡短的（（（內容）簡短），簡潔。（（用詞）簡潔）用於填補大學教學空缺的學術作品集的建議最大長度為五頁。院系可能會提供有關附錄質量和數量的更詳細資訊。<br _istranslated="1"/>投資組合是為各種目的而創建的，最重要的情況是招聘（招募<br _istranslated="1"/>人才）。Portfolio也是員工培養專業知識（培養專業知識）的絕佳方式，也可以用於發展討論和建立工作單位的職位描述。</p>
+<p style="padding-left: 30px;"><a _msthash="170607" _msttexthash="5914506" href="https://www.huronconsultinggroup.com/insights/academic-portfolio-data-collaboration-teach">https://www.huronconsultinggroup.com/insights/academic-portfolio-data-collaboration-teach</a></p>
+<p _msthash="170608" _msttexthash="14025372855" style="padding-left: 60px;">成功管理學術作品集需要持續（持續）協作（協同）和使用數據。有許多利益相關者參與這個過程，強調合作的重要性不僅有助於投資組合管理，而且有助於機構的使命（使命）和願景（願景）。機構和學術領導者可以協調有關戰略活動和資訊管理的對話，以加強長期的學術規劃。<br _istranslated="1"/>此外，隨著領導者審查計劃級成本和數據作為學術投資組合管理的一部分，他們將能夠確定重新分配資金以支持資源密集型學術計劃<br _istranslated="1"/>的機會。更好地訪問這些數據還將提高學習，進步和畢業成果的可見性。隨著學術領導與教師之間關係和協作的加強，決策（決策）、資源分配（資源配置）和數據分析將得到改善。</p>
+<p _msthash="170609" _msttexthash="118030328">這是計算機程式課程 2021 Fall 的作業倉儲與網站 template</p>
+<hr/>
+<p _msthash="170703" _msttexthash="39332137">demo 學號與帳號： mdecourse</p>
+<p _msthash="170704" _msttexthash="22005152">網站倉儲： <a _istranslated="1" href="https://github.com/mdecourse/cp2021_hw">https://github.com/mdecourse/cp2021_hw</a></p>
+<p _msthash="170705" _msttexthash="24646882">網站連結： <a _istranslated="1" href="https://mde.tw/cp2021_hw">https://mde.tw/cp2021_hw</a></p>
+<p _msthash="170706" _msttexthash="111814209">其他與個人或作業相關資料說明或介紹：</p>
+<p _msthash="170707" _msttexthash="59362966">mdecourse 所屬的實驗室： <a _istranslated="1" href="https://mde.tw">https://mde.tw</a></p>
+<br /> <a href='portable_hybrid.html'>Next</a> >> portable_hybrid</div>
         
     <!-- footer -->
       <div class="container">
